feat: support account password updates
